--- a/examples/sudoku.html
+++ b/examples/sudoku.html
@@ -44,7 +44,7 @@
        src="../lib/jquery.min.js">
     </script>
     <script src="../lib/jquery-ui.min.js"></script>
-    <script src="../lib/jquery.transform.light.js"></script>
+    <script src="../lib/jquery.transit.js"></script>
     <script src="../lib/raphael.js"></script>
     <script src="../build/JSAV-min.js"></script>
     <script>
