Added (failing) tests of Pointer to expose some bugs

--- a/test/index.html
+++ b/test/index.html
@@ -30,6 +30,7 @@
 	<script src="../extras/binaryheap.js"></script>
 
 	<script src="utils/qunit.js"></script>
+  <script src="utils/qunit-assert-close.js"></script>
 	<script src="utils/arrayutils.js"></script>
 
 	<script src="unit/core.js"></script>
