--- a/examples/simple-exercise.html
+++ b/examples/simple-exercise.html
@@ -67,10 +67,12 @@
       for (var i = 0; i < arraySize; i++) {
         modelArray.highlight(i);
         jsav.stepOption("grade", true);
+        jsav.umsg("Highlight " + i);
         jsav.step();
       }
       // swap the first and last element
       modelArray.swap(0, arraySize - 1);
+      jsav.umsg("Now swap");
       jsav.stepOption("grade", true);
       return modelArray;
     }
