Moved BinaryTree from .ds.bintree() to .ds.binarytree() to avoid overlapping with an actual BinTree

--- a/examples/allStructures.html
+++ b/examples/allStructures.html
@@ -59,7 +59,7 @@
 
 
   jsav.label("Binary Tree");
-  var bt = jsav.ds.bintree();
+  var bt = jsav.ds.binarytree();
   bt.root("ki"); // set the value of the root
   bt.root().highlight();
   bt.root().left("3"); // set left child
