--- a/examples/binarytree.html
+++ b/examples/binarytree.html
@@ -39,7 +39,7 @@
     <script src="../build/JSAV.js"></script>
     <script>
     var jsav = new JSAV("av");
-    var bt = jsav.ds.bintree();
+    var bt = jsav.ds.binarytree();
     jsav.step();
     bt.root("ki"); // set the value of the root
     bt.layout(); // ..update layout
