--- a/examples/simple-exercise.html
+++ b/examples/simple-exercise.html
@@ -40,8 +40,7 @@
     var arraySize = 8,
         initialArray = [],
         jsavArray,
-        $array = $("#exerArray"),
-        av = new JSAV($("#jsavcontainer"));
+        av = new JSAV("jsavcontainer");
 
     av.recorded(); // we are not recording an AV with an algorithm
 
@@ -60,19 +59,18 @@
       return jsavArray;
     }
     
-    function modelSolution(jsav) {
-      var modelArray = jsav.ds.array(initialArray);
-      jsav.displayInit();
+    function modelSolution(modeljsav) {
+      var modelArray = modeljsav.ds.array(initialArray);
+      modeljsav.displayInit();
       for (var i = 0; i < arraySize; i++) {
         modelArray.highlight(i);
-        jsav.stepOption("grade", true);
-        jsav.umsg("Highlight " + i);
-        jsav.step();
+        modeljsav.umsg("Highlight " + i);
+        modeljsav.gradeableStep();
       }
       // swap the first and last element
       modelArray.swap(0, arraySize - 1);
-      jsav.umsg("Now swap");
-      jsav.stepOption("grade", true);
+      modeljsav.umsg("Now swap");
+      modeljsav.gradeableStep();
       return modelArray;
     }
     
