Translated the animation control button titles; had to change the order of files in the Makefile

--- a/test/index.html
+++ b/test/index.html
@@ -17,6 +17,7 @@
 
     <!-- JSAV files -->
     <script src="../src/core.js"></script>
+    <script src="../src/translations.js"></script>
     <script src="../src/anim.js"></script>
     <script src="../src/messages.js"></script>
     <script src="../src/utils.js"></script>
