Changed the signature of the jsav.exercise() function by moving compare to options

--- a/test/index.html
+++ b/test/index.html
@@ -46,6 +46,7 @@
     <script src="unit/list.js"></script>
     <script src="unit/effects.js"></script>
     <script src="unit/graph.js"></script>
+    <script src="unit/exercise.js"></script>
     <script src="unit/binaryheap.js"></script>
 
   </head>
