Updated the example exercise to match the new jsav.exercise() function

--- a/examples/simple-exercise.html
+++ b/examples/simple-exercise.html
@@ -76,8 +76,8 @@
     // define a variable to hold the value of index to be swapped
     var swapIndex;
     
-    var exercise = av.exercise(modelSolution, initialize, {class: "jsavhighlight"},
-                              { feedback: "continuous"});
+    var exercise = av.exercise(modelSolution, initialize,
+                              { feedback: "continuous", compare: {class: "jsavhighlight"}});
     exercise.reset();
 
     function arrayClickHandler(index) {
