Minor fixes to examples

--- a/examples/sudoku.html
+++ b/examples/sudoku.html
@@ -40,10 +40,8 @@
   .jsavarray:nth-of-type(3n-2) li { border-top: 2px solid black !important;}
   .jsavarray:nth-of-type(9) li { border-bottom: 2px solid black !important;}
   </style>
-    <script
-       src="../lib/jquery.min.js">
-    </script>
-    <script src="../lib/jquery-ui.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
     <script src="../lib/jquery.transit.js"></script>
     <script src="../lib/raphael.js"></script>
     <script src="../build/JSAV-min.js"></script>
