--- a/examples/list.html
+++ b/examples/list.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <title>Linked List Example</title>
     <link rel="stylesheet" href="../css/JSAV.css" type="text/css" media="screen" title="no title" charset="utf-8" />
     <style>
@@ -17,13 +18,11 @@
   </head>
   <body>
     <h1>JSAV slideshow for lists</h1>
-  <div id="container">
-    <div class="jsavcontrols"></div><span class="jsavcounter"></span>
-    <p class="jsavoutput jsavline"></p>
-    <div class="jsavcanvas"></div>
-  </div>
-  <style>
-  </style>
+    <div id="container">
+      <div class="jsavcontrols"></div><span class="jsavcounter"></span>
+      <p class="jsavoutput jsavline"></p>
+      <div class="jsavcanvas"></div>
+    </div>
     <script
        src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
     </script>
