--- a/examples/allStructures.html
+++ b/examples/allStructures.html
@@ -35,10 +35,8 @@
 <h1>Example of All Data Structures in JSAV</h1>
 <div id="av">
 </div>
-<script
-        src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
-</script>
-<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
 <script src="../lib/jquery.transit.js"></script>
 <script src="../lib/raphael.js"></script>
 <script src="../build/JSAV.js"></script>
