Added KeyValue pair data structure and udpated uni tests, Grunt and examples. Also added default styling.

--- a/test/index.html
+++ b/test/index.html
@@ -33,6 +33,7 @@
     <script src="../src/settings.js"></script>
     <script src="../src/graph.js"></script>
     <script src="../src/exercise.js"></script>
+    <script src="../src/keyvaluepair.js"></script>
 
     <!-- Tests -->
     <script src="unit/core.js"></script>
@@ -46,6 +47,7 @@
     <script src="unit/effects.js"></script>
     <script src="unit/graph.js"></script>
     <script src="unit/exercise.js"></script>
+    <script src="unit/keyvaluepair.js"></script>
 
   </head>
 
@@ -74,6 +76,7 @@
           <li data-value="2"></li>
         </ol>
       </div>
+
       <div id="emptycontainer"></div>
     </div>
   </body>
